# somato

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  Somato.sln  Somato.vcproj  autogen.sh  configure.ac
debian/: changelog  control  copyright  menu  rules
m4/: dk-cxx11.m4  dk-cxxstd.m4  dk-feature.m4  dk-glversion.m4  dk-pkgprog.m4  dk-warn.m4  somato-simd.m4
src/: appdata.cc  appdata.h  application.cc  application.h  array.h  assetresourceio.cc  assetresourceio.h  asynctask.cc  asynctask.h  bitcube.cc  bitcube.h  compile-meshdata.cc  cube.cc  cube.h  cubescene.cc  cubescene.h  glscene.cc  glscene.h  glsceneprivate.h  glshader.cc  glshader.h  gltextlayout.cc  gltextlayout.h  gltypes.h  glutils.cc  glutils.h  main.cc  mainwindow.cc  mainwindow.h  mathutils.cc  mathutils.h  meshloader.cc  meshloader.h  meshtypes.h  puzzle.cc  puzzle.h  puzzlecube.h  simd_fallback.cc  simd_fallback.h  simd_sse.cc  (+9 more)
src/tool/: Makefile.am  meshloader.cc
ui/: app-menu.ui  cubescene.css  cubescene.gtkrc  mainwindow-ui.xml  mainwindow.glade  puzzlepieces.dae  resource.h  shortcuts-window.ui  somato.desktop  somato.gresource.xml  somato.gresource.xml.in  somato.rc  woodtexture-dxt.ktx  woodtexture-eac.ktx  woodtexture-etc.ktx  woodtexture-rgtc.ktx  woodtexture.dds
ui/gtk/: help-overlay.ui  menus.ui
ui/shaders/: cellgrid.frag  cellgrid.geom  cellgrid.vert  focusrect.frag  focusrect.vert  pieceoutline.frag  pieceoutline.geom  pieceoutline.vert  puzzlepieces.frag  puzzlepieces.vert  textlabel.frag  textlabel.vert  wirecage.frag  wirecage.vert
windows/: config.h  deprecations.vsprops  gtkmm-2.4.vsprops  gtkmm-2.4d.vsprops  rawvector.h  resource.h  somato.rc  stdafx.cc  stdafx.h  uncheckedvector.h  vc80target.vsprops  wincruft.vsprops
